<?xml version="1.0"?>
<package format="3">
  <name>light_scan_sim</name>
  <version>0.2.0</version>
  <description>The light_scan_sim package simulates a laser scan originating from a TF against a costmap.</description>

  <maintainer email="josephgeek@gmail.com">Joseph Duchesne</maintainer>
  <author email="josephgeek@gmail.com">Joseph Duchesne</author>

  <license>MIT</license>

  <url type="website">https://github.com/josephduchesne/light_scan_sim</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>builtin_interfaces</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <exec_depend>map_server</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
